feat(polymer_tags): add the relationships of the nodes
